--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
   <div class="welcome-container" id="welcome-message">
     <p class="welcome">Log in to get started</p>
   </div>
-  <div class="logo-container">
+  <div class="logo">
     <img src="goat_icon.png" alt="Logo" class="logo" />
   </div>
-
   <form class="login" id="login-form">
     <input type="text" placeholder="user" class="login__input login__input--user" />
     <input type="password" placeholder="PIN" maxlength="4" class="login__input login__input--pin" />
     <button class="login__btn">&rarr;</button>
   </form>
 
-  <div class="logged-in-controls hidden" id="logged-in-controls" ">
+  <div class="logged-in-controls hidden" id="logged-in-controls">
     <p class="welcome" id="welcome-text-logged-in"></p>
     <img src="goat_icon.png" alt="Logo" class="logo" />
     <button class="logout__btn">Log out</button>
