change layout for mobile navbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="logged-in-controls hidden" id="logged-in-controls">
       <p class="welcome" id="welcome-text-logged-in"></p>
       <img src="goat_icon.png" alt="Logo" class="logo" />
-      <button class="logout__btn">Log out</button>
+      <div class="btnLogoutContainer">
+        <button class="logout__btn">Log out</button>
+      </div>
     </div>
   </nav>
 
